# ai_playground

./: .gitignore  AGENTS.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  test_graph_compile.py
context/: progress.md
modules/: __init__.py  config.py  graph.py  models.py  nodes.py  pageindex.py  research.py  schemas.py  tools.py
modules_old/: router.py
notebooks/: 03_langgraph_pipeline.ipynb  model_routing_robust.ipynb  model_routing_robust.py  openrouter_api.ipynb  test_config_providers.ipynb  test_gemma_4_31b.ipynb  test_nvidia_nim_nemotron_reasoning.ipynb  web_search.ipynb
prototypes/research_app/: README.md  app.py
test/: test_api.py  test_langgraph.py  test_pipeline.py  test_router.py  test_web_search.py
