[project]
name = "test-openrouter-nvidia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.14.4",
    "ipykernel>=7.2.0",
    "ipython>=8.39.0",
    "jupyter-client>=8.8.0",
    "jupyter-core>=5.9.1",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "matplotlib-inline>=0.2.2",
    "nest-asyncio>=1.6.0",
    "openai>=2.37.0",
    "pandas>=2.3.3",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.2",
    "pyzmq>=27.1.0",
    "requests>=2.34.2",
    "tornado>=6.5.5",
    "traitlets>=5.15.0",
]
